@@ -1,33 +1,0 @@
-# $Id$
-# Joomla! Project
-# Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
-# License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-# Note : All ini files need to be saved as UTF-8 - No BOM
-
-ALL MODES=All modes
-DESIGNER MODE=Designer mode
-DIAGNOSTIC MODE=Diagnostic mode
-DISPLAY LOADED LANGUAGE FILES=Display loaded language files
-DISPLAYS ORPHANED STRINGS IN DIFFERENT WAYS=Displays orphaned strings in different ways
-IF YES, DISPLAY A LIST OF THE LANGUAGE FILES LOADED=If Yes, display a list of the language files loaded.
-STRING FORMAT=String Format
-STRIP STRING PREFIX=Strip Key Prefix
-STRIP STRING PREFIX DESC=Strips this prefix from the actual string prior to displaying designer results
-DISPLAY PROFILING INFORMATION=Display Profiling Information
-IF YES, DISPLAY PROFILING INFORMATION=If Yes, display profiling information
-
-DISPLAY SQL QUERY LOG=Display SQL query log
-DISPLAY MEMORY USAGE=Display memory usage
-DISPLAY UNDEFINED LANGUAGE STRINGS=Display undefined language strings.
-IF YES, DISPLAY SQL QUERY LOG=If Yes, display SQL query log.
-IF YES, DISPLAY MEMORY USAGE=If Yes, display memory usage.
-IF YES, DISPLAY UNDEFINED LANGUAGE STRINGS=If Yes, display undefined language strings.
-LANGUAGE FILES LOADED=Language Files Loaded
-MEMORY USAGE=Memory Usage
-PROFILE INFORMATION=Profile Information
-PROVIDES DEBUG INFORMATION=Provides debug information
-QUERIES LOGGED=%s queries logged.
-LEGACY QUERIES LOGGED=%s legacy queries logged.
-UNTRANSLATED STRINGS=Untranslated strings
-UNTRANSLATED STRINGS DESIGNER=Untranslated Strings Designer
-UNTRANSLATED STRINGS DIAGNOSTIC=Untranslated Strings Diagnostic
