@@ -4,30 +4,29 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-ALL MODES=All modes
-DESIGNER MODE=Designer mode
-DIAGNOSTIC MODE=Diagnostic mode
-DISPLAY LOADED LANGUAGE FILES=Display loaded language files
-DISPLAYS ORPHANED STRINGS IN DIFFERENT WAYS=Displays orphaned strings in different ways
-IF YES, DISPLAY A LIST OF THE LANGUAGE FILES LOADED=If yes, display a list of the language files loaded
-STRING FORMAT=String Format
-STRIP STRING PREFIX=Strip Key Prefix
-STRIP STRING PREFIX DESC=Strips this prefix from the actual string prior to displaying designer results
-DISPLAY PROFILING INFORMATION=Display Profiling Information
-IF YES, DISPLAY PROFILING INFORMATION=If yes, display profiling information
+PLG_SYSTEM_DEBUG_DESC=This plugin provides a variety of system information and assistance for the creation of translation files.
 
-DISPLAY SQL QUERY LOG=Display SQL query log
-DISPLAY MEMORY USAGE=Display memory usage
-DISPLAY UNDEFINED LANGUAGE STRINGS=Display undefined language strings
-IF YES, DISPLAY SQL QUERY LOG=If Yes, display SQL query log
-IF YES, DISPLAY MEMORY USAGE=If Yes, display memory usage
-IF YES, DISPLAY UNDEFINED LANGUAGE STRINGS=If Yes, display undefined language strings
-LANGUAGE FILES LOADED=Language Files Loaded
-MEMORY USAGE=Memory Usage
-PROFILE INFORMATION=Profile Information
-PROVIDES DEBUG INFORMATION=Provides debug information
-QUERIES LOGGED=%s queries logged
-LEGACY QUERIES LOGGED=%s legacy queries logged
-UNTRANSLATED STRINGS=Untranslated strings
-UNTRANSLATED STRINGS DESIGNER=Untranslated Strings Designer
-UNTRANSLATED STRINGS DIAGNOSTIC=Untranslated Strings Diagnostic
+DEBUG_LANGUAGE_FILES_LOADED=Language Files Loaded
+DEBUG_MEMORY_USAGE=Memory Usage
+DEBUG_PROFILE_INFORMATION=Profile Information
+DEBUG_QUERIES_LOGGED=%d Queries Logged
+DEBUG_UNTRANSLATED_STRINGS=Untranslated Strings
+
+DEBUG_PARAM_ALLOWED_GROUPS_DESC=Optionally restrict users that can see debug information to those in the selected user groups. If none selected, all users see the debug information.
+DEBUG_PARAM_ALLOWED_GROUPS_LABEL=Allowed Groups
+DEBUG_PARAM_LANGUAGE_FILES_DESC=Display a list of the language files that have Joomla has tried to load. 
+DEBUG_PARAM_LANGUAGE_FILES_LABEL=Show Language Files
+DEBUG_PARAM_LANGUAGE_STRING_DESC=Display a list of the untranslated language strings.
+DEBUG_PARAM_LANGUAGE_STRING_LABEL=Show Language String
+DEBUG_PARAM_MEMORY_DESC=Display the total memory usage.
+DEBUG_PARAM_MEMORY_LABEL=Show Memory Usage
+DEBUG_PARAM_PROFILING_DESC=Display the profiling waypoints.
+DEBUG_PARAM_PROFILING_LABEL=Show Profiling
+DEBUG_PARAM_QUERIES_DESC=Display a list the queries executed while displaying the page.
+DEBUG_PARAM_QUERIES_LABEL=Show Queries
+DEBUG_PARAM_STRIP_FIRST_DESC=In multi-word strings, always strip the first word.
+DEBUG_PARAM_STRIP_FIRST_LABEL=Strip First Word
+DEBUG_PARAM_STRIP_PREFIX_DESC=Strip words from the beginning of the string. For multiple words, use the format: (word1|word2)
+DEBUG_PARAM_STRIP_PREFIX_LABEL=Strip From Start
+DEBUG_PARAM_STRIP_SUFFIX_DESC=Strip words from the end of the string. For multiple words, use the format: (word1|word2)
+DEBUG_PARAM_STRIP_SUFFIX_LABEL=Strip From End
