@@ -1,41 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<install version="1.5" type="plugin" group="system">
+<install
+	version="1.5"
+	type="plugin"
+	group="system">
 	<name>System - Debug</name>
 	<author>Joomla! Project</author>
 	<creationDate>December 2006</creationDate>
-	<copyright>Copyright (C) 2005 - 2008 Open Source Matters. All rights reserved.</copyright>
+	<copyright>Copyright (C) 2005 - 2008 Open Source Matters. All rights reserved.
+	</copyright>
 	<license>http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL</license>
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.5</version>
-	<description>Provides debug information</description>
+	<description>Plg_System_Debug_Desc</description>
 	<files>
-		<filename plugin="debug">debug.php</filename>
+		<filename
+			plugin="debug">debug.php</filename>
 	</files>
 	<params>
-		<param name="profile" type="radio" default="1" label="Display Profiling Information" description="If yes, display profiling information">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+		<param
+			name="filter_groups"
+			type="usergroup"
+			multiple="true"
+			size="10"
+			default=""
+			label="Debug_Param_Allowed_groups_Label"
+			description="Debug_Param_Allowed_groups_Desc" />
+
+		<param
+			name="profile"
+			type="radio"
+			default="1"
+			label="Debug_Param_Profiling_Label"
+			description="Debug_Param_Profiling_Desc">
+			<option
+				value="1">JYes</option>
+			<option
+				value="0">JNo</option>
 		</param>
-		<param name="queries" type="radio" default="1" label="Display SQL query log" description="If yes, display SQL query log">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+
+		<param
+			name="queries"
+			type="radio"
+			default="1"
+			label="Debug_Param_Queries_Label"
+			description="Debug_Param_Queries_Desc">
+			<option
+				value="1">JYes</option>
+			<option
+				value="0">JNo</option>
 		</param>
-		<param name="memory" type="radio" default="1" label="Display memory usage" description="If yes, display memory usage">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+
+		<param
+			name="memory"
+			type="radio"
+			default="1"
+			label="Debug_Param_Memory_Label"
+			description="Debug_Param_Memory_Desc">
+			<option
+				value="1">JYes</option>
+			<option
+				value="0">JNo</option>
 		</param>
-		<param name="language_files" type="radio" default="1" label="Display loaded language files" description="If yes, display a list of the language files loaded">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+
+		<param
+			name="language_files"
+			type="radio"
+			default="1"
+			label="Debug_Param_Language_files_Label"
+			description="Debug_Param_Language_files_Desc">
+			<option
+				value="1">JYes</option>
+			<option
+				value="0">JNo</option>
 		</param>
-		<param name="language_strings" type="list" default="2" label="Display undefined language strings" description="Displays orphaned strings in different ways">
-			<option value="0">JNo</option>
-			<option value="-1">All modes</option>
-			<option value="1">Diagnostic mode</option>
-			<option value="2">Designer mode</option>
+
+		<param
+			type="spacer" />
+
+		<param
+			name="language_strings"
+			type="radio"
+			default="1"
+			label="Debug_Param_Language_string_Label"
+			description="Debug_Param_Language_string_Desc">
+			<option
+				value="1">JYes</option>
+			<option
+				value="0">JNo</option>
 		</param>
-		<param name="language_prefix" type="text" default="" label="Strip String Prefix" description="Strip String Prefix Desc" />
-		<param name="filter_groups" type="usergroup" multiple="true" size="10" default="" label="Filter Groups" description="Filter Groups Desc" />
+
+		<param
+			name="strip-first"
+			type="radio"
+			default="1"
+			label="Debug_Param_Strip_First_Label"
+			description="Debug_Param_Strip_First_Desc">
+			<option
+				value="1">JYes</option>
+			<option
+				value="0">JNo</option>
+		</param>
+
+		<param
+			name="strip-prefix"
+			type="textarea"
+			label="Debug_Param_Strip_Prefix_Label"
+			description="Debug_Param_Strip_Prefix_Desc"
+			rows="4"
+			cols="30" />
+
+		<param
+			name="strip-suffix"
+			type="textarea"
+			label="Debug_Param_Strip_Suffix_Label"
+			description="Debug_Param_Strip_Suffix_Desc"
+			default=""
+			rows="4"
+			cols="30" />
 	</params>
 </install>
