@@ -31,6 +31,8 @@ $ -> Language fix or change
 ^ Install from directory now remembers previous path.
 ^ Refactored language installation error messages.
 ^ Forced language installation file to require client attribute.
+^ Refactored System Debug language strings.
++ New options in System Debug plugin to more tightly control how the untranslated string present
 
 25-Sep-2009 Mark Dexter
 # Add extension to new Category in Content->Category Manager
